# Entity/City.go
@@ -4,12 +4,12 @@ type City struct {
 	ID int	`json:"id" gorm:"primaryKey;autoIncrement"`
 	Name string `json:"name"`
 	Slug string `json:"slug"`
-	//RegionID int `json:"region_id" "column:region_id"`
-	//IsCapital bool `json:"is_capital" "column:is_capital"`
-	//Type string `json:"type" gorm:"type:enum('Город', 'Село', 'пгт', 'Деревня')"`
-	//Latitude float64 `json:"latitude"`
-	//Longitude float64 `json:"longitude"`
+	RegionID int `json:"region_id" "column:region_id"`
+	IsCapital bool `json:"is_capital" "column:is_capital"`
+	Type string `json:"type" gorm:"type:enum(\'Город\', \'Село\', \'пгт\', \'Деревня\')"`
+	Latitude float64 `json:"latitude"`
+	Longitude float64 `json:"longitude"`
 	//TimeZone
-	//Population int `json:"population"`
+	Population int `json:"population"`
 	//Updated
 }
